# cis194-haskell-homework

./: .gitignore  Makefile  README.md  cis-stack.cabal  cis194.cabal  package.yaml
.github/workflows/: haskell.yml
2013/: CHANGELOG.md  cis-stack.cabal  package.yaml  stack.yaml
2013/src/Week1/: Week1.hs
2013/src/Week3/: Golf.hs
2013/src/Week7/: Buffer.hs  Editor.hs  Sized.hs  StringBufEditor.hs  StringBuffer.hs
2013/test/Week2/: Week2Spec.hs
2013/test/Week3/: Week3Spec.hs
2013/test/Week5/: Week5Spec.hs
2013/test/Week6/: Week6Spec.hs
2016/: LICENSE  cis194.cabal  shell.nix
2016/app/: Main.hs
2016/src/Week1/: Week1.hs
2016/src/Week2/: Week2.hs
app/: Week1.hs
app/Week2/: LogAnalysis.hs
app/Week3/: Golf.hs
app/Week4/: Week4.hs
app/Week5/: Week5.hs
app/Week6/: Week6.hs
src/Week2/: LogAnalysis.hs
src/Week4/: Week4.hs
src/Week6/: Week6.hs
test/: week1-spec.hs  week2-spec.hs  week3-spec.hs  week4-spec.hs  week5-spec.hs  week6-spec.hs
test/Week1/: Week1Spec.hs
test/Week4/: Week4Spec.hs
