cabal-version:      2.4
name:               cis194
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cis194
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite week1
    type: exitcode-stdio-1.0
    hs-source-dirs:   test, app
    main-is:          week1-spec.hs
    other-modules:    Week1
    build-depends:    base ^>=4.14.3.0,
                      hspec,
                      QuickCheck,
    default-language: Haskell2010

test-suite week2
    type: exitcode-stdio-1.0
    hs-source-dirs:   test, app
    main-is:          week2-spec.hs
    other-modules:    Week2.Log,
                      Week2.LogAnalysis
    build-depends:    base ^>=4.14.3.0,
                      hspec,
                      QuickCheck,
    default-language: Haskell2010

test-suite week3
    type: exitcode-stdio-1.0
    hs-source-dirs:   test, app
    main-is:          week3-spec.hs
    other-modules:    Week3.Golf
    build-depends:    base ^>=4.14.3.0,
                      hspec,
                      QuickCheck
    default-language: Haskell2010
